--- a/Contacts/index.html
+++ b/Contacts/index.html
@@ -8,7 +8,7 @@
         
         
         <link rel="shortcut icon" href="../img/favicon.ico">
-        <title>Contacts - Cliff's homepage</title>
+        <title>Contacts - Home</title>
         <link href="../css/bootstrap.min.css" rel="stylesheet">
         <link href="../css/font-awesome.min.css" rel="stylesheet">
         <link href="../css/base.css" rel="stylesheet">
@@ -23,7 +23,7 @@
     <body>
         <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" href="..">Cliff's homepage</a>
+                <a class="navbar-brand" href="..">Home</a>
                 <!-- Expander button -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
@@ -88,7 +88,9 @@
                     <div class="col-md-9" role="main">
 
 <h2 id="useful-pages">Useful pages</h2>
-<p><a href="https://blog.csdn.net/qq_20913021/article/details/53009694">知识图谱</a></p></div>
+<blockquote>
+<p><a href="https://blog.csdn.net/qq_20913021/article/details/53009694">知识图谱</a></p>
+</blockquote></div>
             </div>
         </div>
 
