--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         
         <link rel="shortcut icon" href="img/favicon.ico">
-        <title>Cliff's homepage</title>
+        <title>Home</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
         <link href="css/base.css" rel="stylesheet">
@@ -23,7 +23,7 @@
     <body class="homepage">
         <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" href=".">Cliff's homepage</a>
+                <a class="navbar-brand" href=".">Home</a>
                 <!-- Expander button -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
@@ -193,5 +193,5 @@ Email: sylcliff@xjtu.edu.cn
 
 <!--
 MkDocs version : 1.2.2
-Build Date UTC : 2021-09-12 17:44:48.107496+00:00
+Build Date UTC : 2021-09-13 05:51:02.859048+00:00
 -->
