--- a/Publication/index.html
+++ b/Publication/index.html
@@ -8,7 +8,7 @@
         
         
         <link rel="shortcut icon" href="../img/favicon.ico">
-        <title>Publication - Cliff's homepage</title>
+        <title>Publication - Home</title>
         <link href="../css/bootstrap.min.css" rel="stylesheet">
         <link href="../css/font-awesome.min.css" rel="stylesheet">
         <link href="../css/base.css" rel="stylesheet">
@@ -23,7 +23,7 @@
     <body>
         <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" href="..">Cliff's homepage</a>
+                <a class="navbar-brand" href="..">Home</a>
                 <!-- Expander button -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
@@ -98,6 +98,7 @@
                     <div class="col-md-9" role="main">
 
 <h2 id="selected-publications">Selected Publications</h2>
+<blockquote>
 <ol>
 <li>
 <p>Jianfeng, Su; Qijing, Zheng; Shi, Yongliang<em>; Jin, Zhao</em>, <a href="https://pubs.acs.org/doi/10.1021/acs.jpclett.0c02838">Interlayer
@@ -154,6 +155,7 @@ Huo, Jia; Zou, Yuqin; Yu, Gang; Luo, Jun; Dong, Chung-Li; Wang, Shuangyin,
 Methanol Oxidation.</a> Nano Energy 2018, 53, 604−612. </p>
 </li>
 </ol>
+</blockquote>
 <h2 id="publications">Publications</h2>
 <ol>
 <li>
