--- a/Contacts/index.html
+++ b/Contacts/index.html
@@ -89,7 +89,8 @@
 
 <h2 id="useful-pages">Useful pages</h2>
 <blockquote>
-<p><a href="https://blog.csdn.net/qq_20913021/article/details/53009694">知识图谱</a></p>
+<p><a href="https://blog.csdn.net/qq_20913021/article/details/53009694">知识图谱</a>
+<a href="https://www.brown.edu/Departments/Engineering/Labs/Peterson/tips/index.html">Atomistic Tips &amp; Tricks</a></p>
 </blockquote></div>
             </div>
         </div>
